# evals_legal_rag

./: .gitignore  README.md  evaluation.ipynb  ground_truth_generation.ipynb  legal_rag.py  llm_evaluation_summary.csv  llm_only_results.json  llm_only_results.pkl  prompts.py  pyproject.toml  qa_list.json  qa_list_evaluated.json  qa_list_factual_only.json  qa_list_relevant_and_factual.json  qa_list_relevant_only.json  rag_cot_results.json  rag_evaluation.ipynb  rag_results.json  rag_results.pkl  results.ipynb
